Agregando animaciones para la presentación

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,48 @@ h1 {
 .nombre {
   font-size: 1rem; }
 
+/* animaciones */
+.fadeIn {
+  animation-name: fadeIn;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+  visibility: visible !important; }
+
+@keyframes fadeIn {
+  0% {
+    transform: scale(0);
+    opacity: 0.0; }
+  60% {
+    transform: scale(1.1); }
+  80% {
+    transform: scale(0.9);
+    opacity: 1; }
+  100% {
+    transform: scale(1);
+    opacity: 1; } }
+
+.stretchRight {
+  animation-name: stretchRight;
+  animation-duration: 2s;
+  animation-timing-function: ease-out;
+  transform-origin: 0% 0%; }
+
+@keyframes stretchRight {
+  0% {
+    transform: scaleX(0.3); }
+  40% {
+    transform: scaleX(1.02); }
+  60% {
+    transform: scaleX(0.98); }
+  80% {
+    transform: scaleX(1.01); }
+  100% {
+    transform: scaleX(0.98); }
+  80% {
+    transform: scaleX(1.01); }
+  100% {
+    transform: scaleX(1); } }
+
 /* Sección sobre mí */
 .titulo {
   font-style: "Nunito", sans-serif;
