--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,6 +265,8 @@ h1 {
 /* Sección de Skills*/
 .cajaSkills {
   display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
   margin: 0 auto; }
 
 .iconoSkill {
@@ -273,7 +275,7 @@ h1 {
   height: 8vh;
   width: auto;
   padding: 6px;
-  margin: 1.5rem 0 0 2.5rem; }
+  margin: 1.5rem 2.5rem 0 2.5rem; }
 
 .iconoSkillGit {
   background-color: #ccc;
