--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -73,6 +73,10 @@ $fuenteCuatro: "WebSymbolsRegular";
 body {
   font-family: 'Open Sans', sans-serif;
 }
+//clase para contener elementos al 90% de la pantalla
+.contenedor{
+  max-width: 90%;
+}
 /* clases para el header */
 //id para el nav
 #nav{
@@ -209,21 +213,28 @@ body {
 .nav-item a:hover{
   text-decoration: underline;
 }
-//para darle formato a los iconos de las redes sociales
+.cajaIconosPresentacion{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+}
+//para darle formato a los iconos de la presentación
 .iconoPresentacion{
   height: 8vh;
   width: auto;
   background-color: $colorUno;
   border-radius: 50%;
   padding: 4px;
-  margin: 1.5rem 0 0 2.5rem; 
+  // margin: 1.5rem 0 0 2.5rem; 
  }
+//para darle formato a los nombres de los iconos de la presentación y skills
+.nombreIcono{
+  text-align: center;
+  color: $colorUno;
+  // margin-left: 2.5rem;
+} 
 /* fin de animaciones, etiquetas, clases e id para el header*/
 
-//clase para contener elementos al 90% de la pantalla
-.contenedor{
-  max-width: 90%;
-}
 /* Sección de presentación */
 //acercaDe = presentación
 .presentacion{
@@ -366,19 +377,24 @@ h1{
   margin: 1.5rem 2.5rem 0 2.5rem;
 }
 
-.iconoSkillGit{
-  background-color: $colorCuatro;
-  border-radius: 20%;
-}
+// .iconoSkillGit{
+//   background-color: $colorCuatro;
+//   border-radius: 20%;
+// }
 
-.iconoSkillGitHub{
-  background-color: $colorCuatro;
-  border-radius: 20%;
-}
+// .iconoSkillGitHub{
+//   background-color: $colorCuatro;
+//   border-radius: 20%;
+// }
 
-.iconoSkillDataBase{
-  background-color: $colorCuatro;
-  border-radius: 20%;
+// .iconoSkillDataBase{
+//   background-color: $colorCuatro;
+//   border-radius: 20%;
+// }
+
+/* Sección de formación */
+.formacionTexto{
+  margin-left: 2rem;
 }
 
 /* Sección de los proyectos */
