--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,6 +270,18 @@ h1 {
   margin-top: 1.5rem;
   color: #00538c; }
 
+.cajaHobbie {
+  display: flex;
+  flex-direction: column; }
+
+.iconoHobbie {
+  background-color: white;
+  height: 8vh;
+  margin: 0.5rem;
+  padding: 4px;
+  width: auto;
+  align-self: flex-start; }
+
 /* Sección de Skills*/
 .cajaSkills {
   display: flex;
