modificando el h1 y otras etiquetas

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -247,6 +247,7 @@ body {
 //etiqueta para el h1
 h1{
   font-family: $fuenteUno;
+  font-size: 5rem;
   color: $colorUno;
   text-align: start; 
 }
