--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -224,8 +224,7 @@ body {
   width: auto;
   background-color: $colorUno;
   border-radius: 50%;
-  padding: 4px;
-  // margin: 1.5rem 0 0 2.5rem; 
+  padding: 4px; 
  }
 //para darle formato a los nombres de los iconos de la presentación y skills
 .nombreIcono{
@@ -244,13 +243,19 @@ body {
   align-items: center;
   letter-spacing: 1px;
 }
-//etiqueta para el h1
-h1{
+//clase para el h1
+.tituloPrincipal{
   font-family: $fuenteUno;
-  font-size: 5rem;
+  font-size: 4.5rem;
   color: $colorUno;
+  margin-top: 3rem;
   text-align: start; 
 }
+//clase para el texto de presentación
+.presentacionInfoPrincipal{
+  font-size: 1.75rem;
+}
+
 //clases que comparten las mismas propiedades
 .presentacion .foto .nombre{
   margin-bottom: 8px;
@@ -521,6 +526,13 @@ h1{
 /* media querys para una mejor adaptación */
 //media query específica  
 @media(max-width: 1200px){
+  .tituloPrincipal{
+    font-size: 2.7rem;
+    margin-top: 5rem;
+  }
+  .presentacionInfoPrincipal{
+    font-size: 1.25rem;
+  }
   .proyecto{
     width: 40%;
   }
@@ -530,6 +542,16 @@ h1{
 }  
 //media query para tablets
 @media(max-width: 991.98px){
+  .tituloPrincipal{
+    font-size: 2.4rem;
+    margin-top: 0rem;
+  }
+  .presentacionInfoPrincipal{
+    font-size: 1.25rem;
+  }
+  .imgFotoPerfil{
+    max-width: 23vw;
+  }
   /*Para sacar la transformación de los items del menú*/
   .hoverMenu{
     transition: none;
@@ -597,9 +619,21 @@ h1{
 }
 //media query para dispositivos entre tablets y mobile
 @media(max-width: 768px){
-  #portfolio{
-    font-size: 1.75rem;
+  .presentacion{
+    margin: 0rem 1.5rem 0rem 1.5rem;
   }
+  .tituloPrincipal{
+    font-size: 2rem;
+  }
+  .presentacionInfoPrincipal{
+    font-size: 1.25rem;
+  }
+  .imgFotoPerfil{
+    max-width: 20vw;
+  }
+  // #portfolio{
+  //   font-size: 1.75rem;
+  // }
   .proyecto{
     width: 75%;
   }
@@ -613,30 +647,44 @@ h1{
 }
 //media query para mobile
 @media(max-width: 575.98px){
-  #portfolio{
-    font-size: 1.25rem;
+  .tituloPrincipal{
+    font-size: 1.5rem;
+  }
+  .presentacionInfoPrincipal{
+    font-size: 1rem;
   }
   .imgFotoPerfil{
-    max-width: 50vw;
+    max-width: 40vw;
   }
-
+  .iconoPresentacion{
+    height: 6vh; 
+   }
+  .nombreIcono{
+    font-size: 0.8rem;
+  }
+  // #portfolio{
+  //   font-size: 1.25rem;
+  // }
   .logo{
     padding-right: 3.5vw;
   }
-
   .gear{
     font-size: 5vh;
   }
-
   .justBeNice{
-    font-size: 10vh;
+    font-size: 7vh;
     padding-left: 0.5rem;
-    margin-bottom: 1.5rem;
+    // margin-bottom: 1.5rem;
+    margin-top: 1rem;
   }  
   
   .logo a p {
     font-size: 3vh;
-  } 
+  }
+  
+  .resumen{
+    font-size: 1rem;
+  }
 
   .proyecto {
     width: 85vw;
@@ -650,7 +698,10 @@ h1{
   .logoFooter{
     font-size: 10vw;
   }
-
+  .info{
+    line-height: 25px;
+    margin: 10px 0px 10px 0px;    
+  }
   //cambiando la animación de desplazamiento en Mobile, para adaptarla
   .desplazamiento{
     animation-name: desplazamiento;
