--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -234,6 +234,11 @@ body {
 } 
 /* fin de animaciones, etiquetas, clases e id para el header*/
 
+//para que cada sección tenga como mínimo 100vh de altura
+// section{
+//   min-height: 80vh;
+// }
+
 /* Sección de presentación */
 //acercaDe = presentación
 .presentacion{
@@ -254,6 +259,7 @@ body {
 //clase para el texto de presentación
 .presentacionInfoPrincipal{
   font-size: 1.75rem;
+  max-width: 65vw;
 }
 
 //clases que comparten las mismas propiedades
@@ -384,6 +390,7 @@ body {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
+  align-items: center;
   margin: 0 auto;
 }
 
@@ -392,26 +399,9 @@ body {
   border-radius: 20%;
   height: 8vh;
   width: auto;
-  // background-color: $colorUno;
-  // border-radius: 20%;
   padding: 6px;
   margin: 1.5rem 2.5rem 0 2.5rem;
 }
-
-// .iconoSkillGit{
-//   background-color: $colorCuatro;
-//   border-radius: 20%;
-// }
-
-// .iconoSkillGitHub{
-//   background-color: $colorCuatro;
-//   border-radius: 20%;
-// }
-
-// .iconoSkillDataBase{
-//   background-color: $colorCuatro;
-//   border-radius: 20%;
-// }
 
 /* Sección de formación */
 .formacionTexto{
@@ -548,6 +538,7 @@ body {
   }
   .presentacionInfoPrincipal{
     font-size: 1.25rem;
+    max-width: 100vw;
   }
   .imgFotoPerfil{
     max-width: 23vw;
