--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -118,7 +118,7 @@ body {
 /*animación para hacer girar un elemento*/
 .rodar{
   animation-name: rodar;
-  animation-duration: 2s;
+  animation-duration: 1.9s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }  
@@ -217,6 +217,7 @@ body {
   display: flex;
   flex-flow: row wrap;
   justify-content: flex-start;
+  margin-top: 1.5rem;
 }
 //para darle formato a los iconos de la presentación
 .iconoPresentacion{
@@ -233,11 +234,6 @@ body {
   // margin-left: 2.5rem;
 } 
 /* fin de animaciones, etiquetas, clases e id para el header*/
-
-//para que cada sección tenga como mínimo 100vh de altura
-// section{
-//   min-height: 80vh;
-// }
 
 /* Sección de presentación */
 //acercaDe = presentación
@@ -428,12 +424,12 @@ body {
   border: 2px solid $colorCuatro;
   border-radius: 5px;
   box-shadow: 0px 0px 5px $colorCuatro inset;
-  transition: 1s all;
+  // transition: 1s all;
 }
 //para dar opacidad a los proyectos cuando pasen el mouse
-.proyecto:hover{
-  opacity: 0.6;
-}
+// .proyecto:hover{
+//   opacity: 0.6;
+// }
 //clase para la imagen de cada proyecto
 .img {  /*640 ancho x 426 alto*/
   width: 100%;
@@ -442,9 +438,9 @@ body {
   border-radius: 10px; }
 //clase para la información de cada proyecto
 .info{
-  font-style: var(--fuenteDos);
-  line-height: 10px;
-  margin: 15px 0px 15px 0px;    
+  // font-style: $fuenteUno;
+  line-height: 15px;
+  margin: 8px 0px 8px 0px;    
 }
 
 /*clases para la sección de contacto*/
@@ -458,46 +454,52 @@ body {
 //botón de enviar
 .btnColorUno{
     background-color: $colorDos;
+    color: white;
     font-family: $fuenteUno;
+    font-weight: bold;
 }
 //hover en botón de enviar
 .btnColorUno:hover{
     background-color: $colorTres;
+    color:white;
 }
 //botón de resetear
 .btnColorDos{
     background-color: $colorSiete;
+    color: white;
     font-family: $fuenteUno;
+    font-weight: bold;
 }
 //hover en el botón de resetear
 .btnColorDos:hover{
     background-color: $colorCinco;
+    color: white;
 }
 
 /* clases para el footer */
 //id para darle estructura al footer
 #footer {
  max-width: 100vw;
- height: 25vh;
- background-color: $colorContenedor; 
+ min-height: 20vh;
+ background-color: $colorContenedor;
+ text-align: center; 
 } 
   
-#footer .info {
-  text-align: center;
-  order: 2;
-  color: $colorCinco; 
-}
+// #footer .info {
+//   text-align: center;
+//   order: 2;
+//   color: $colorCinco; 
+// }
 
 .logoFooter{
-  order: 1;
+  // order: 1;
   text-decoration: none;
   color: $colorCinco;
-  font-size: 4vw;
   font-family: $fuenteUno;
   font-style: italic;
   font-weight: bold;
   font-size: 4.5vw;
-  margin-right: 2vw;
+  text-align: center;
   text-shadow: 2px 2px 5px $colorSeis;
 }
 
@@ -506,11 +508,17 @@ body {
   text-shadow: 2px 2px 5px $colorDos; 
 }
   
-.pie{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 2vh;
+// .pie{
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   padding: 2vh;
+// }
+
+.footerInfo{
+  color: $colorCinco;
+  line-height: 1.5rem;
+  margin: 8px 0px 8px 0px;    
 }
 
 /* media querys para una mejor adaptación */
@@ -653,9 +661,6 @@ body {
   .nombreIcono{
     font-size: 0.8rem;
   }
-  // #portfolio{
-  //   font-size: 1.25rem;
-  // }
   .logo{
     padding-right: 3.5vw;
   }
@@ -665,33 +670,30 @@ body {
   .justBeNice{
     font-size: 7vh;
     padding-left: 0.5rem;
-    // margin-bottom: 1.5rem;
     margin-top: 1rem;
   }  
-  
   .logo a p {
     font-size: 3vh;
   }
-  
   .resumen{
     font-size: 1rem;
   }
-
   .proyecto {
     width: 85vw;
     height: auto;
   }
-
   .cajaFormulario {
     max-width: 85vw;
   }
-
   .logoFooter{
     font-size: 10vw;
   }
   .info{
-    line-height: 25px;
+    line-height: 15px;
     margin: 10px 0px 10px 0px;    
+  }
+  footer h4 .info{
+    line-height: 30px;
   }
   //cambiando la animación de desplazamiento en Mobile, para adaptarla
   .desplazamiento{
