--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -459,6 +459,7 @@ body {
     color: white;
     font-family: $fuenteUno;
     font-weight: bold;
+    margin: 0px 12px 12px 12px;
 }
 //hover en botón de enviar
 .btnColorUno:hover{
@@ -471,6 +472,7 @@ body {
     color: white;
     font-family: $fuenteUno;
     font-weight: bold;
+    margin: 0px 12px 12px 12px;
 }
 //hover en el botón de resetear
 .btnColorDos:hover{
