ajustando los tamaños del logo

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -110,7 +110,7 @@ body {
 .gear{
   font-family: "webSymbolsRegular";
   margin: 0 1vw 0 0;
-  font-size: 7vh;
+  font-size: 5vh;
   // color: $colorDos;
   text-shadow: 0px 0px 3px $colorCuatro;
   }
@@ -552,7 +552,7 @@ body {
     padding-right: 3vw;
   }
   .gear{
-    font-size: 6vh;
+    font-size: 5vh;
   }
   .justBeNice{
     font-size: 12vh;
@@ -638,7 +638,8 @@ body {
     padding-right: 3.5vw;
   }
   .gear{
-    font-size: 4vh;
+    font-size: 3.5vh;
+    margin-right: 0.5rem;
   }
   .justBeNice{
     font-size: 7vh;
@@ -646,7 +647,7 @@ body {
     margin-top: 1.25rem;
   }  
   .logo a p {
-    font-size: 3vh;
+    font-size: 2.75vh;
   }
   .resumen{
     font-size: 1rem;
