--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ body {
 .gear {
   font-family: "webSymbolsRegular";
   margin: 0 1vw 0 0;
-  font-size: 7vh;
+  font-size: 5vh;
   text-shadow: 0px 0px 3px #ccc; }
 
 /* animaciones */
@@ -422,7 +422,7 @@ body {
   .logo {
     padding-right: 3vw; }
   .gear {
-    font-size: 6vh; }
+    font-size: 5vh; }
   .justBeNice {
     font-size: 12vh;
     margin-left: 2vw;
@@ -480,13 +480,14 @@ body {
   .logo {
     padding-right: 3.5vw; }
   .gear {
-    font-size: 4vh; }
+    font-size: 3.5vh;
+    margin-right: 0.5rem; }
   .justBeNice {
     font-size: 7vh;
     padding-left: 0.5rem;
     margin-top: 1.25rem; }
   .logo a p {
-    font-size: 3vh; }
+    font-size: 2.75vh; }
   .resumen {
     font-size: 1rem; }
   .sobreMiTexto {
