sacando el background-color de iconoSkill

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -390,7 +390,7 @@ body {
 }
 
 .iconoSkill{
-  background-color: $colorCuatro;
+  // background-color: $colorCuatro;
   border-radius: 20%;
   height: 8vh;
   width: auto;
