colocando container a los contenidos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ body {
   font-family: 'Open Sans', sans-serif; }
 
 .contenedor {
-  max-width: 95%; }
+  max-width: 80%; }
 
 /* clases para el header */
 #nav {
@@ -179,7 +179,6 @@ body {
 .presentacion {
   color: #3c4146;
   display: flex;
-  margin: 0 0 0 5rem;
   align-items: center;
   letter-spacing: 1px; }
 
@@ -187,8 +186,7 @@ body {
   font-family: "Nunito", sans-serif;
   font-size: 4.5rem;
   color: #212529;
-  margin-top: 3rem;
-  text-align: start; }
+  margin-top: 3rem; }
 
 .presentacionInfoPrincipal {
   font-size: 1.75rem;
@@ -394,6 +392,8 @@ body {
 
 /* media querys para una mejor adaptación */
 @media (max-width: 1200px) {
+  .presentacion {
+    justify-content: center; }
   .tituloPrincipal {
     font-size: 2.7rem;
     margin-top: 5rem; }
@@ -488,9 +488,12 @@ body {
   .logo a p {
     font-size: 2.75vh; }
   .resumen {
-    font-size: 1rem; }
-  .sobreMiTexto {
-    margin-left: 1.5rem; }
+    font-size: 1rem;
+    margin: 0rem 1.5rem 0rem 1.5rem; }
+  .iconoHobbie {
+    margin: 0rem 1.5rem 0rem 1.5rem; }
+  .habilidades {
+    margin: 1rem 1.5rem 1rem 1.5rem; }
   .proyecto {
     width: 85vw;
     height: auto; }
