--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -373,7 +373,7 @@ body {
 }
 
 .iconoHobbie{
-  background-color: white;
+  // background-color: $colorContenedor;
   height: 8vh;
   margin: 0.5rem;
   padding: 4px;
