--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,15 @@
 /***** Variables globales en SASS *****/
 /** Variables de colores personalizados **/
 /*Variables de colores de Bootstrap*/
-/** Variables de colores a usar para mi proyecto**/
-/*Color de Portfolio header y h1 con frase*/
-/* color del simbolo 1, sombra del simbolo 2 y botón enviar*/
-/* color de titulos, hover enviar y hover Portfolio */
+/** Variables de colores a usar para el portafolio**/
+/*Color del h1 y textos en general*/
+/*color del simbolo 1, simbolo 2 y hover de los botones ver demo y enviar*/
+/*color de titulo de secciones y de botones ver demo y enviar*/
 /*Colores de sombras*/
-/*Color los background del header, titulos y footer*/
+/*color de sombra del form y de los botones ver código y borrar*/
+/*color de hover del logo*/
+/*color de hover de los botones ver código y borrar*/
+/*Color para los background del header, titulos y footer*/
 /** Variables de fuentes de letras **/
 /** Fuentes **/
 @font-face {
@@ -36,24 +39,20 @@
   font-weight: normal;
   font-style: normal; }
 
+/*para que todas las letras en general tengan por defecto fuente 'Opens Sans'*/
 body {
   font-family: 'Open Sans', sans-serif; }
-
-.contenedor {
-  max-width: 80%; }
 
 /* clases para el header */
 #nav {
   background-color: #f8f9fa; }
 
-.nav-item a:hover {
-  text-decoration: underline; }
-
-.hoverMenu {
+.menu {
   transition: all 300ms; }
 
-.hoverMenu:hover {
-  transform: scale(1.15, 1.15); }
+.menu:hover {
+  transform: scale(1.15, 1.15);
+  text-decoration: underline; }
 
 .logo {
   display: flex;
@@ -65,16 +64,15 @@ body {
 
 .logo:hover {
   color: #484848;
-  border-radius: 5px;
   overflow: hidden; }
 
 .gear {
-  font-family: "webSymbolsRegular";
+  font-family: "WebSymbolsRegular";
   margin: 0 1vw 0 0;
   font-size: 5vh;
   text-shadow: 0px 0px 3px #ccc; }
 
-/* animaciones */
+/***** animaciones *****/
 /*animación para hacer girar un elemento*/
 .rodar {
   animation-name: rodar;
@@ -88,6 +86,7 @@ body {
   to {
     transform: rotateZ(360deg); } }
 
+/*animación para hacer un elemento y que genere el efecto de desaparecer*/
 .logo:hover .gear {
   animation: cae 500ms linear; }
 
@@ -119,13 +118,13 @@ body {
     transform: translateX(0%); } }
 
 .justBeNice {
-  font-family: "webSymbolsRegular";
+  font-family: "WebSymbolsRegular";
   font-size: 12vh;
   margin-left: 2vw;
   margin-bottom: 1.9rem;
   font-weight: bold;
   font-style: italic;
-  text-shadow: 7px 7px 15px #6c757d; }
+  text-shadow: 8px 5px 7px #a8a8a8; }
 
 .desplazamiento {
   animation-name: desplazamiento;
@@ -282,11 +281,8 @@ body {
   padding: 6px;
   margin: 1.5rem 2.5rem 0 2.5rem; }
 
-/* Sección de formación */
-.formacionTexto {
-  margin-left: 2rem; }
-
-/* Sección de la formación y los proyectos. Van a usar las mismas clases */
+/* Sección de formación y los proyectos */
+/* Van a usar las mismas clases */
 .proyectos {
   display: flex;
   flex-flow: row wrap;
