--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,6 +341,20 @@ body {
   background-color: #3c4146;
   color: white; }
 
+#spinner {
+  display: none;
+  justify-content: center; }
+
+.mensajeExitoso {
+  color: white;
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+  font-size: 1rem;
+  background-color: #00538c;
+  margin-top: 1rem;
+  padding: 1rem;
+  text-align: center; }
+
 /* clases para el footer */
 #footer {
   max-width: 100vw;
