--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,8 @@ body {
 
 /* clases para el header */
 #nav {
-  background-color: #f8f9fa; }
+  background-color: #f8f9fa;
+  min-height: 15vh; }
 
 .menu {
   transition: all 300ms; }
@@ -116,15 +117,6 @@ body {
     transform: translateX(200%); }
   to {
     transform: translateX(0%); } }
-
-.justBeNice {
-  font-family: "WebSymbolsRegular";
-  font-size: 12vh;
-  margin-left: 2vw;
-  margin-bottom: 1.9rem;
-  font-weight: bold;
-  font-style: italic;
-  text-shadow: 8px 5px 7px #a8a8a8; }
 
 .desplazamiento {
   animation-name: desplazamiento;
