--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -48,6 +48,7 @@ $colorSeis: #484848;
 $colorSiete: #3c4146;
 /*Color para los background del header, titulos y footer*/
 $colorContenedor: #f8f9fa;
+// $colorContenedor: black;
 /** Variables de fuentes de letras **/
 $fuenteUno: "Nunito", sans-serif;
 $fuenteDos: "WebSymbolsRegular";  
@@ -82,6 +83,7 @@ body {
 //id para el nav
 #nav{
   background-color: $colorContenedor;
+  min-height: 15vh;
 } 
 //efecto hover en el menú, para agrandar los items
 .menu{
@@ -166,15 +168,15 @@ body {
   }
 }
 //clase para el emblema 'just be nice'  
-.justBeNice{
-  font-family: $fuenteDos;
-  font-size: 12vh;
-  margin-left: 2vw;
-  margin-bottom: 1.9rem;
-  font-weight: bold;
-  font-style: italic;
-  text-shadow: 8px 5px 7px $colorCinco; 
-}
+// .justBeNice{
+//   font-family: $fuenteDos;
+//   font-size: 12vh;
+//   margin-left: 2vw;
+//   margin-bottom: 1.9rem;
+//   font-weight: bold;
+//   font-style: italic;
+//   text-shadow: 8px 5px 7px $colorCinco; 
+// }
 //animación para que algo venga con desplazamiento
 .desplazamiento{
   animation-name: desplazamiento;
